Отчёт "Список согласования": при пустом списке NULL не выводятся.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2551 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
@@ -132,7 +132,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Исполнитель: "+ $F{col_ExecEmployee.LastName}+ " "+ ($F{col_ExecEmployee.FirstName} + " ").substring(0,1)+ "."+ (""+ $F{col_ExecEmployee.MiddleName}).substring(0,1)+ ", "+ $F{col_ExecEmployee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Исполнитель: "+ ($F{col_ExecEmployee.LastName} == null ? "" : $F{col_ExecEmployee.LastName})+( $F{col_ExecEmployee.FirstName} == null ? "" : " "+ ($F{col_ExecEmployee.FirstName} + " ").substring(0,1))+ ($F{col_ExecEmployee.MiddleName} == null ? "" : "."+ ($F{col_ExecEmployee.MiddleName}+ " ").substring(0,1))+ ($F{col_ExecEmployee.StaffPosition.Name} == null ? "" : ", "+ $F{col_ExecEmployee.StaffPosition.Name}) + ($F{col_Item.Employee.Unit.Name} == null ? "" : ", "+ $F{col_Item.Employee.Unit.Name})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="57733b0b-8072-4194-ad89-e36d5cf70a4b" positionType="FixRelativeToBottom" x="362" y="30" width="180" height="32"/>
@@ -225,7 +225,7 @@
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" spacingBefore="1" spacingAfter="1" tabStopWidth="30"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{col_Item.Employee.LastName}+ " "+ ($F{col_Item.Employee.FirstName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Item.Employee.MiddleName}+ " ").substring(0,1) + ", "+ $F{col_Item.Employee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[($F{col_Item.Employee.LastName} == null ? "" : $F{col_Item.Employee.LastName})+ ($F{col_Item.Employee.FirstName} == null ? "" : " "+ ($F{col_Item.Employee.FirstName}+ " ").substring( 0, 1 ))+ ($F{col_Item.Employee.MiddleName} == null ? "" : "."+ ($F{col_Item.Employee.MiddleName}+ " ").substring(0,1)) + ($F{col_Item.Employee.StaffPosition.Name} == null ? "" : ", "+ $F{col_ExecEmployee.StaffPosition.Name}) + ($F{col_Item.Employee.Unit.Name} == null ? "" : ", "+ $F{col_Item.Employee.Unit.Name})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="624" y="2" width="100" height="22"/>
