ALF-822: Редактор машины состояний: добавить сплиттер
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2562 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
@@ -34,3 +34,15 @@
 	background-image: url('/share/res/components/images/delete-16.png');
 	cursor: pointer;
 }
+
+.title h3 {
+    font-weight: bold;
+    margin: 5px 0;
+}
+.diagram-cont > div:not(.yui-resize-handle) {
+    height: 150px;
+    overflow: auto;
+    border: solid 1px #d3d3d3;
+    padding: 0 10px;
+    margin-bottom: 10px;
+}
