--- a/lecm-documents/share/src/main/webapp/css/lecm-documents/documents-journal-menu.css
+++ b/lecm-documents/share/src/main/webapp/css/lecm-documents/documents-journal-menu.css
@@ -1,3 +1,3 @@
-#lecm-menu #menu-buttons-contractsBtn span.first-child {
+#lecm-menu #menu-buttons-creator span.first-child {
     background: url('/share/res/images/lecm-contracts/alf_contracts_32.png') no-repeat 4px 4px;
 }
