ALF-690 3.3.13 Просмотр сводной информации о работе сотрудников. В сервис Рабочий календарь добавлен функционал для просмотра сводной информации о рабочих днях сотрудников.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2604 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/webapp/css/lecm-calendar/wcalendar-menu.css
+++ b/lecm-calendar/share/src/main/webapp/css/lecm-calendar/wcalendar-menu.css
@@ -1,5 +1,3 @@
-/* Нужно поменять иконки на подходящие */
-
 #lecm-menu #menu-buttons #menu-buttons-wcalendarCalendarBtn span.first-child {
     background: url('/share/res/images/lecm-calendar/lecm-calendar_wcalendar-3.png') no-repeat 4px 4px;
 }
@@ -7,5 +5,8 @@
     background: url('/share/res/images/lecm-calendar/lecm-calendar_schedule-3.png') no-repeat 4px 4px;
 }
 #lecm-menu #menu-buttons #menu-buttons-wcalendarAbsenceBtn span.first-child {
+    background: url('/share/res/images/lecm-calendar/lecm-calendar_absence-3.png') no-repeat 4px 4px;
+}
+#lecm-menu #menu-buttons #menu-buttons-wcalendarWorkingDaysSummaryBtn span.first-child {
     background: url('/share/res/images/lecm-calendar/lecm-calendar_absence-3.png') no-repeat 4px 4px;
 }
