исправление стилей в форме создания/редактирования договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2663 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
@@ -29,3 +29,8 @@
 .yui-skin-lecmTheme div.dashlet-metadata div.set div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-value {
 	width: 78px;
 }
+
+.yui-skin-lecmTheme div.lecm-daterange-control .datarange-start-date div.form-field a img.datepicker-icon,
+.yui-skin-lecmTheme div.lecm-daterange-control .datarange-end-date div.form-field a img.datepicker-icon {
+     margin: 0.4em 0.4em;
+}
