ALF-930: Добавлены системные связи
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2664 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-connections-list.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-connections-list.css
@@ -99,3 +99,7 @@ div.list-action-set .onActionDelete a {
 .connections-list .space {
 	padding-top: 2em;
 }
+
+.connections-list .system-connection {
+	color: red;
+}
