--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -61,8 +61,10 @@
     max-width: 180px;
     text-overflow: ellipsis;
 }
-.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set > div.form-field > select,
-.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set > div.form-field > input[type=text]:not(.date-entry) {
+.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set > div.form-field > div > select {
+    width: 639px;
+}
+.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set > div.form-field > div > input[type=text]:not(.date-entry) {
     width: 675px !important;
 }
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set > div.form-field > input.formsCheckBox {
