ALF-918 Атрибутивный поиск договоров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2671 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2146,6 +2146,9 @@ span.person a h3 {
 .yui-skin-lecmTheme.alfresco-share .yui-panel .form-field input[name$=-range] ~ div div.yui-u > div > a > img {
     margin: 0.4em 0.4em;
 }
+.yui-skin-lecmTheme.alfresco-share .yui-panel .form-field input[name$=-range] ~ div div.yui-u span {
+    display: block;
+}
 .yui-skin-lecmTheme.alfresco-share .yui-panel .search .form-field input[name$=-range] ~ div {
     width: 460px !important;
 }
