--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2095,27 +2095,81 @@ span.person a h3 {
     margin: auto 0;
 }
 
-.notification-row {
-    line-height: 16px;
-    margin: 10px;
+/* Notifications - start */
+#notificationsWindow {
+    background: #fff;
+    border: 1px solid #777;
 }
-.notification-row.bold {
+#notificationsWindow .hd,
+#notificationsWindow .bdft {
+    height: 40px;
+    background: #bbe6f3;
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+#notificationsWindow .hd {
+    line-height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    color: #126a8b;
+}
+#notificationsWindow .bdft > span.yui-button {
+    margin: 6px 10px;
+}
+#notificationsWindow a.container-close {
+    width: 16px;
+    height: 16px;
+    top: 10px;
+    right: 10px;
+    background: url("images/lecmUI/notification_window_close_16.png");
+    border-radius: 0;
+    opacity: .5;
+}
+#notificationsWindow a.container-close:hover {
+    opacity: .8;
+}
+#notificationsWindow a.container-close:active {
+    opacity: 1;
+}
+#notificationsWindow-body > div.main-part {
+    height: 300px;
+    overflow-y: auto;
+    position: relative;
+}
+#notificationsWindow-content .notification-row {
+    padding: 10px 10px 5px;
+    border-bottom: 1px solid #d7d7d7;
+}
+#notificationsWindow-content .notification-row.bold {
     font-weight: bold;
 }
-
-#notificationsWindow a {
-	text-decoration: underline;
+#notificationsWindow-content .notification-row .detail {
+    font-size: 13px;
+    color: #3a3a3a;
 }
-
-#notificationsWindow-content {
-	height: 300px;
-	overflow-y: auto;
-	border-bottom: 1px solid #C5C7C6;
+#notificationsWindow-body a,
+#notificationsWindow-body a:hover,
+#notificationsWindow-body a:visited {
+    color: #68a0c8;
+    text-decoration: none;
 }
-
+#notificationsWindow-content .notification-row > span:not(.detail) {   /* date */
+    color: #126a8b;
+    font-weight: bold;
+    line-height: 20px;
+    cursor: default;
+}
 #notificationsWindow-next {
-	text-align: center;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    position: static;
+    bottom: 0;
 }
+/* Notifications - end */
 
 .grid .archive-record, .grid .archive-record span a, .grid .archive-record a {
     color:red;
