Исправление меню в редакторе машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2682 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -20,12 +20,14 @@
 }
 
 .import-xml button {
-    background: url("../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png") no-repeat 4px 4px;
+    background: url("../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png") no-repeat 17px 8px;
     cursor: pointer;
 }
 .import-xml {
     position: relative;
     overflow: hidden;
+    padding: 0 1px;
+    margin: 0 -1px;
 }
 .import-xml input {
     position: absolute;
@@ -33,6 +35,6 @@
     top: 0;
     opacity: 0;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 35px !important;
 }
 
