--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1983,6 +1983,16 @@ div.object-finder .picker-items .addIcon {
     background: transparent url(images/add-item.png) no-repeat center center;
 }
 
+div.object-finder .association-auto-complete-selected-item .employee-available {
+    background: transparent url(images/employee-available.png) no-repeat center center;
+    padding: 6px;
+}
+
+div.object-finder .association-auto-complete-selected-item .employee-unavailable {
+    background: transparent url(images/employee-unavailable.png) no-repeat center center;
+	padding: 6px;
+}
+
 div.orgchart-picker-menu .search-button button {
     background: transparent url(images/search.png) no-repeat center center;
     height: 25px;
