--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
@@ -19,14 +19,14 @@
 }
 
 .yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date div.form-field label,
-.yui-skin-lecmTheme div.dashlet-metadata div.lecm-daterange-control div.datarange-end-date div.form-field span.viewmode-label,
-.yui-skin-lecmTheme div.dashlet-metadata div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-label {
+.yui-skin-lecmTheme div.metadata-form div.lecm-daterange-control div.datarange-end-date div.form-field span.viewmode-label,
+.yui-skin-lecmTheme div.metadata-form div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-label {
 	width: auto;
 }
-.yui-skin-lecmTheme div.dashlet-metadata div.lecm-daterange-control div.datarange-unlimited {
+.yui-skin-lecmTheme div.metadata-form div.lecm-daterange-control div.datarange-unlimited {
     margin-left: 20px;
 }
-.yui-skin-lecmTheme div.dashlet-metadata div.set div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-value {
+.yui-skin-lecmTheme div.metadata-form div.set div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-value {
 	width: 78px;
 }
 
