--- a/lecm-documents/share/src/main/webapp/css/components/document-header.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-header.css
@@ -1,12 +1,11 @@
 .document-header {
-    background: #c5c5c5;
-    border-radius: 3px 3px 0px 0px;
+    background: #f2f2f2;
+    border-radius: 3px 3px 0 0;
 }
 
 .document-header h1 {
     padding: 0.5em 1em 0.5em;
-
-	font-family: Arial;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	font-weight: bold;
 	font-style: normal;
