--- a/lecm-documents/share/src/main/webapp/css/document-components-panel.css
+++ b/lecm-documents/share/src/main/webapp/css/document-components-panel.css
@@ -1,9 +1,10 @@
-.document-components-panel {
-    background-color: #f2f2f2;
-    border-bottom: 1px solid #000;
+.document-components-panel,
+.document-forms-panel {
+    border-bottom: 1px solid #ccc;
     padding: 0.8em;
 }
-.widget-bordered-panel.last-panel .document-components-panel {
+.widget-bordered-panel.last-panel .document-components-panel,
+.doc-right-part > div:last-child .document-forms-panel {
     border-bottom: none;
 }
 #doc-attach-right .document-components-panel {
@@ -21,17 +22,9 @@
     border-bottom: none;
     padding: 1em 1em 0;
 }
-.widget-bordered-panel {
-    background-color: #f2f2f2;
-    padding: 0 0.8em;
-}
-.document-forms-panel {
-    background-color: #f2f2f2;
-    padding: 0.8em;
-}
 .document-components-panel ul.document-right-set {
     width: 100%;
-    padding: 0 0 0 1em;
+    padding: 1em 0 0 1em;
 }
 .doc-right-part .text-broken,
 .doc-right-part div.viewmode-field span.viewmode-label,
