ALF-952 : Редизайн формы документа: bugfix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2706 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -34,6 +34,7 @@
     background-color: #bbe6f3;
     border-radius: 4px 4px 0 0;
     padding: 7px 1em 6px;
+    overflow: hidden;
 }
 .yui-u .dashlet .dashlet-title.title span {
     color: #0a678e;
