ALF-931 Передача документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2707 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-header.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-header.css
@@ -75,6 +75,12 @@
     border: 1px solid;
 }
 
+.document-header .document-action .transfer-right span.first-child {
+    background: url('../../images/lecm-subscriptions/alf_subscriptions_to_object_32.png') no-repeat 5px 5px;
+    padding-left: 7px;
+    border: 1px solid;
+}
+
 .document-header .attachment-thumbnail
 {
 	float: left;
