--- a/lecm-contracts/repo/src/main/config/reportdefinitions/contract-dossier.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/contract-dossier.jrxml
@@ -28,7 +28,7 @@
 	<field name="col_StatusDate" class="java.util.Date">
 		<fieldDescription><![CDATA[Дата смены статус]]></fieldDescription>
 	</field>
-	<field name="col_Sum" class="java.lang.String">
+	<field name="col_Sum" class="java.lang.Number">
 		<fieldDescription><![CDATA[Сумма договора]]></fieldDescription>
 	</field>
 	<field name="col_DateStart" class="java.util.Date">
@@ -126,7 +126,7 @@
 			<staticText>
 				<reportElement uuid="d8bb2dda-1473-4a36-bbec-a69fcb797671" x="0" y="0" width="515" height="23"/>
 				<textElement textAlignment="Center">
-					<font fontName="DejaVu Serif Condensed" size="14" isBold="true"/>
+					<font fontName="DejaVu Serif" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Досье договора]]></text>
 			</staticText>
@@ -139,9 +139,9 @@
 					<reportElement uuid="d9ef702e-7970-4723-a873-f856fd6f9bcc" stretchType="RelativeToBandHeight" x="256" y="0" width="1" height="50"/>
 				</line>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="b147e370-5cae-43c5-92e3-5b277c5196b6" x="260" y="0" width="255" height="20"/>
+					<reportElement uuid="b147e370-5cae-43c5-92e3-5b277c5196b6" x="265" y="4" width="240" height="20"/>
 					<textElement textAlignment="Left">
-						<font fontName="DejaVu Sans Mono"/>
+						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[( ($F{col_Initiator.Family} == null) ? "" : $F{col_Initiator.Family})
 + (($F{col_Initiator.Name} == null) ? "" : "."+ $F{col_Initiator.Name})
@@ -150,9 +150,9 @@
 + (($F{col_Initiator.Phone} == null) ? "" : "тел. "+ $F{col_Initiator.Phone})]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="7bb365d6-f832-4ff0-91eb-ba8eee154d6d" x="5" y="0" width="250" height="20"/>
+					<reportElement uuid="7bb365d6-f832-4ff0-91eb-ba8eee154d6d" x="5" y="4" width="245" height="20"/>
 					<textElement textAlignment="Left">
-						<font fontName="DejaVu Sans Mono"/>
+						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Инициатор документа"]]></textFieldExpression>
 				</textField>
@@ -163,14 +163,14 @@
 					<reportElement uuid="aeaa7d17-69a0-4fcf-b50e-e6f919212975" stretchType="RelativeToTallestObject" x="0" y="0" width="515" height="23"/>
 				</rectangle>
 				<staticText>
-					<reportElement uuid="af9178ca-3fbf-4ccf-bc63-2587e452b51c" x="5" y="0" width="100" height="20"/>
+					<reportElement uuid="af9178ca-3fbf-4ccf-bc63-2587e452b51c" x="5" y="4" width="100" height="16"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Текущий статус:]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="8c4c74fa-24c9-4a2c-a28b-de1670df9bac" x="111" y="0" width="100" height="20"/>
+					<reportElement uuid="8c4c74fa-24c9-4a2c-a28b-de1670df9bac" x="111" y="4" width="394" height="16"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -186,29 +186,29 @@
 					<reportElement uuid="d2efc426-e9a3-485f-b6f9-a5e4aa120b7d" stretchType="RelativeToBandHeight" x="256" y="0" width="1" height="35"/>
 				</line>
 				<textField>
-					<reportElement uuid="4c91e42f-198e-4909-be9b-c38d812ab0ae" x="5" y="1" width="100" height="20"/>
+					<reportElement uuid="4c91e42f-198e-4909-be9b-c38d812ab0ae" x="5" y="4" width="100" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Сумма договора"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="075f7fac-6c99-4b22-b3db-8ee34e818f87" stretchType="RelativeToTallestObject" x="105" y="1" width="150" height="20"/>
+					<reportElement uuid="075f7fac-6c99-4b22-b3db-8ee34e818f87" stretchType="RelativeToTallestObject" x="105" y="4" width="150" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[( ($F{col_Sum} == null) ? "???" : $F{col_Sum})
+					<textFieldExpression><![CDATA[( ($F{col_Sum} == null) ? "???" : msg("{0,number,currency}", $F{col_Sum}) )
 + " "+ (($F{col_SumUnits} == null) ? "" : $F{col_SumUnits})]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="d4fc1788-3d96-47bd-85a2-6a41c5831ce3" x="257" y="1" width="117" height="20"/>
+					<reportElement uuid="d4fc1788-3d96-47bd-85a2-6a41c5831ce3" x="260" y="4" width="115" height="31"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Тематика договора"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="814ecca9-621f-4974-a688-917be9fd0949" x="375" y="1" width="138" height="20"/>
+					<reportElement uuid="814ecca9-621f-4974-a688-917be9fd0949" x="378" y="4" width="132" height="31"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -224,30 +224,30 @@
 					<reportElement uuid="64391a72-9167-46b7-b3f1-5a6f6281c586" stretchType="RelativeToBandHeight" x="256" y="0" width="1" height="58"/>
 				</line>
 				<textField>
-					<reportElement uuid="caf78eab-f56e-4602-8717-6554bbb96900" x="5" y="1" width="250" height="20"/>
+					<reportElement uuid="caf78eab-f56e-4602-8717-6554bbb96900" x="5" y="5" width="250" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Номер и дата документа:"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="6b6ce4a5-c256-4c95-b8ee-e8f84445381e" stretchType="RelativeToTallestObject" x="5" y="25" width="250" height="20"/>
+					<reportElement uuid="6b6ce4a5-c256-4c95-b8ee-e8f84445381e" stretchType="RelativeToTallestObject" x="5" y="29" width="245" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[( ($F{col_DocKind} == null) ? "" : $F{col_DocKind})
-+ "№ " + (($F{col_Regnum} == null) ? "?" : $F{col_Regnum})
-+ " от "+ (($F{col_DateStart} ==null) ? "?" : $F{col_DateStart})]]></textFieldExpression>
++ " № " + (($F{col_Regnum} == null) ? "?" : $F{col_Regnum})
++ " от "+ (($F{col_DateStart} ==null) ? "?" : msg( "{0,date,short}", $F{col_DateStart}) )]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="0c7a2a72-f99a-4b9a-831e-27f245ee4204" x="258" y="1" width="117" height="20"/>
+					<reportElement uuid="0c7a2a72-f99a-4b9a-831e-27f245ee4204" x="262" y="5" width="117" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Номер проекта"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="1726e4cb-6f18-4779-ae44-181cfaa784ff" x="258" y="25" width="254" height="20"/>
+					<reportElement uuid="1726e4cb-6f18-4779-ae44-181cfaa784ff" x="262" y="29" width="248" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -263,28 +263,28 @@
 					<reportElement uuid="04a4719f-3ac5-4a0a-b8dc-2800160454f4" stretchType="RelativeToBandHeight" x="256" y="0" width="1" height="85"/>
 				</line>
 				<textField>
-					<reportElement uuid="48d8f2c8-1ae3-489a-b103-8431a579461c" x="5" y="1" width="250" height="20"/>
+					<reportElement uuid="48d8f2c8-1ae3-489a-b103-8431a579461c" x="5" y="5" width="250" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Контрагент:"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="bbc5a4b4-d75d-4898-9ec2-4705f1ecc357" stretchType="RelativeToTallestObject" x="5" y="25" width="250" height="20"/>
+					<reportElement uuid="bbc5a4b4-d75d-4898-9ec2-4705f1ecc357" stretchType="RelativeToTallestObject" x="5" y="29" width="250" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[( ($F{col_Contragent.fullname} == null) ? "" : $F{col_Contragent.fullname})]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="1b33a81f-e30c-4f68-b024-2b4b8fef57d5" x="258" y="1" width="255" height="20"/>
+					<reportElement uuid="1b33a81f-e30c-4f68-b024-2b4b8fef57d5" x="262" y="5" width="246" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Регистрационный номер контрагента"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="ba42ac58-4e87-49d4-b868-d599c6e30c88" x="258" y="25" width="254" height="20"/>
+					<reportElement uuid="ba42ac58-4e87-49d4-b868-d599c6e30c88" x="262" y="29" width="246" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -313,14 +313,14 @@
 					<reportElement uuid="c82a82a2-037e-4f58-afff-63a87ec54c81" stretchType="RelativeToBandHeight" x="171" y="0" width="1" height="116"/>
 				</line>
 				<textField>
-					<reportElement uuid="674996cc-c2d8-40dd-bf6c-cba2476dda69" x="5" y="0" width="165" height="20"/>
+					<reportElement uuid="674996cc-c2d8-40dd-bf6c-cba2476dda69" x="5" y="4" width="160" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Банковские реквизиты:"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="7ea69480-9b57-45e6-9eea-fc2fa485d485" stretchType="RelativeToTallestObject" x="5" y="20" width="165" height="96"/>
+					<reportElement uuid="7ea69480-9b57-45e6-9eea-fc2fa485d485" stretchType="RelativeToTallestObject" x="5" y="24" width="160" height="90"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -330,14 +330,14 @@
 + (($F{col_Contragent.TransactAccount} == null) ? "" : "р/с " + $F{col_Contragent.TransactAccount})]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="434cb946-c0cf-4935-9081-26b763b5cad2" x="171" y="0" width="170" height="20"/>
+					<reportElement uuid="434cb946-c0cf-4935-9081-26b763b5cad2" x="177" y="4" width="160" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Местонахождение юр. адрес"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="2dc6a433-92a1-4236-8957-90b3b8870a13" x="171" y="20" width="170" height="20"/>
+					<reportElement uuid="2dc6a433-92a1-4236-8957-90b3b8870a13" x="177" y="24" width="160" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -347,14 +347,14 @@
 					<reportElement uuid="4fe63406-6e53-45ea-995f-81df100b512f" stretchType="RelativeToBandHeight" x="342" y="0" width="1" height="116"/>
 				</line>
 				<textField>
-					<reportElement uuid="94e33056-113b-4885-b360-e1c5e71644e2" x="342" y="0" width="173" height="20"/>
+					<reportElement uuid="94e33056-113b-4885-b360-e1c5e71644e2" x="348" y="4" width="160" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Фактический адрес, телефон:"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="c4cda64d-d79b-4ef3-9ded-5c09961c7b37" x="342" y="20" width="170" height="20"/>
+					<reportElement uuid="c4cda64d-d79b-4ef3-9ded-5c09961c7b37" x="348" y="24" width="160" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -368,14 +368,14 @@
 					<reportElement uuid="b093227b-b6dc-4399-b277-560ff76e64b1" stretchType="RelativeToTallestObject" x="0" y="0" width="515" height="23"/>
 				</rectangle>
 				<staticText>
-					<reportElement uuid="b7916c8e-85a0-484b-a8b1-e479f0547bea" x="5" y="0" width="200" height="20"/>
+					<reportElement uuid="b7916c8e-85a0-484b-a8b1-e479f0547bea" x="5" y="2" width="200" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Подписант со стороны контрагента:]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="7fe9b72c-c870-4cb7-85e7-9e6105351902" x="205" y="0" width="300" height="20"/>
+					<reportElement uuid="7fe9b72c-c870-4cb7-85e7-9e6105351902" x="205" y="2" width="300" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -393,14 +393,14 @@
 					<reportElement uuid="8bdb7004-17c4-43a1-bd06-c48ae57575b9" stretchType="RelativeToBandHeight" x="256" y="0" width="1" height="85"/>
 				</line>
 				<textField>
-					<reportElement uuid="db37aedd-60eb-4aca-989b-88cce250a62e" x="5" y="1" width="250" height="20"/>
+					<reportElement uuid="db37aedd-60eb-4aca-989b-88cce250a62e" x="5" y="3" width="250" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Срок действия договора"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="606599c5-6f86-48a1-9d81-f8c97a845be5" stretchType="RelativeToTallestObject" x="5" y="25" width="250" height="60"/>
+					<reportElement uuid="606599c5-6f86-48a1-9d81-f8c97a845be5" stretchType="RelativeToTallestObject" x="5" y="25" width="250" height="58"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -408,14 +408,14 @@
 + (($F{col_DateEnd} == null) ? "" : msg( " по {0,date,short}", $F{col_DateEnd}) )]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="ded6d036-79d5-4679-a4ab-957b0729b746" x="258" y="1" width="85" height="20"/>
+					<reportElement uuid="ded6d036-79d5-4679-a4ab-957b0729b746" x="258" y="3" width="85" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Бессрочный: "]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="d51c8d45-4812-4ace-9d43-4d542d7e1252" x="341" y="1" width="116" height="20"/>
+					<reportElement uuid="d51c8d45-4812-4ace-9d43-4d542d7e1252" x="341" y="3" width="116" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
@@ -428,14 +428,14 @@
 					<reportElement uuid="ab843cb4-2789-410c-9267-a33350b71ac4" stretchType="RelativeToTallestObject" x="0" y="0" width="515" height="23"/>
 				</rectangle>
 				<staticText>
-					<reportElement uuid="ea2f9e85-60bd-461f-b506-bda5395c7059" x="5" y="0" width="152" height="20"/>
+					<reportElement uuid="ea2f9e85-60bd-461f-b506-bda5395c7059" x="5" y="2" width="152" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Местонахождение договора:]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="218d976f-7183-4911-af47-7be0fa16c17e" x="159" y="0" width="353" height="20"/>
+					<reportElement uuid="218d976f-7183-4911-af47-7be0fa16c17e" x="159" y="2" width="353" height="20"/>
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
