ALF-967 : В представлении "список договоров с фильтром по статусам" - поле "Сумма договора" выключить вправо, добавить валюту : Исправление
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2749 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2265,3 +2265,9 @@ span.person a h3 {
     max-width: 470px;
 }
 
+/* Договора : стили для столбца "сумма по договору" */
+.yui-skin-lecmTheme .datagrid .grid.yui-dt .yui-dt-data td[class*="prop_lecm-contract_totalAmountWithCurrency"] {
+    text-align: right;
+    margin-right: 10px;
+}
+
