--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -142,6 +142,9 @@
     border-bottom: medium none;
     padding: 0 1em;
 }
+.yui-panel.form-container .form-fields {
+    padding-top: 1em;
+}
 
 /* Details Form */
 
