ALF-978 : Статус-строка для документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2773 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
@@ -1120,6 +1120,7 @@ z-index: 9000;
 }
 .yui-skin-lecmTheme .sticky-wrapper #doc3 {
     padding-top: 70px;
+    overflow: hidden;
 }
 .yui-skin-lecmTheme .sticky-push,
 .yui-skin-lecmTheme .sticky-footer {
