--- a/lecm-documents/share/src/main/webapp/css/components/status-string.css
+++ b/lecm-documents/share/src/main/webapp/css/components/status-string.css
@@ -1,5 +1,12 @@
 .status-string {
 	background-color: #ccc;
 	text-align: center;
-	margin-top: 20px;
+    position: fixed;
+    padding: 10px 0;
+    border: 1px solid #6c6c6c;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+}
+.status-string textarea {
+    resize: none;
 }
