ALF-994 Изменения в карточке сотрудника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2815 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2271,3 +2271,40 @@ span.person a h3 {
     margin-right: 10px;
 }
 
+.thumbnail-view {
+    position: absolute;
+    right: 50px;
+    text-align: right;
+    top: 60px;
+}
+
+.thumbnail-view-text {
+    border: 2px solid #acacac;
+    display: block;
+    padding: 20px 0;
+    text-align: center;
+    white-space: normal;
+    width: 80px;
+    top:60px;
+    position: absolute;
+    right: 50px;
+
+}
+.thumbnail-edit {
+    position: absolute;
+    right: 15px;
+    text-align: right;
+    top: 40px;
+}
+
+.thumbnail-edit-text {
+    border: 2px solid #acacac;
+    display: block;
+    padding: 20px 0;
+    text-align: center;
+    white-space: normal;
+    width: 80px;
+    top:40px;
+    position: absolute;
+    right: 5px;
+}
